--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+pdf:
+    path: /pdf/{id}
+    controller: App\Controller\PdfController::generatePdf
