--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,5 +2,5 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 pdf:
-    path: /pdf/{id}
+    path: /pdf/{id}/{nbrColumns}/{nbrRows}
     controller: App\Controller\PdfController::generatePdf
