Test Ajax reload un _morceau.html.twig

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,7 @@
 pdf:
     path: /pdf/{id}
     controller: App\Controller\PdfController::generatePdf
+
+recharge_partie:
+    path: /recharge-partie/{deckId}/{dataTab}
+    controller: App\Controller\UpdateCardControlleurController::index
