--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,8 +35,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        # - { path: ^/utilisateur, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/mon_profil, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/play, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/deck, roles: IS_AUTHENTICATED_FULLY }
 
